AUTOMAKE_OPTIONS=foreign subdir-objects

SUBDIRS = . samples

lib_LIBRARIES=libivtutil.a

libivtutil_a_SOURCES = cjson/cJSON.c \
    cjson/cJSON.h \
    http_client/HTTPClient.c \
    http_client/HTTPClient.h  \
    http_client/HTTPClientAuth.c \
    http_client/HTTPClientAuth.h \
    http_client/HTTPClientCommon.h \
    http_client/HTTPClientString.h \
    http_client/HTTPClientString.c \
    http_client/HTTPClientWrapper.h \
    http_client/HTTPClientWrapper.c 
    

                    



